@@ -1,5 +1,3 @@
 DIST kadu-0.6.0.1.tar.bz2 1566609 RMD160 06709d16dd84a10c917fb12ee3dd06eb4ef18879 SHA1 727c5b25b7178f8d947497182da6817c170b7d6a SHA256 5b022f3043b112bbba6115bdf2877ff01d6b3b1342d74db5977fa92b1662d68c
-DIST kadu-0.6.0.tar.bz2 1583937 RMD160 d53830b98b6485924ad3076694b1db78121b1c2b SHA1 ff5cdd0daa9f9de795cbfe15e163b358a9ee55e2 SHA256 f0e31b5ef00c64cad75a43220842b5564b8ec1dfd0c4481f0f3ac8b88fb9e752
 EBUILD kadu-window_notify-0.6.0.1.ebuild 266 RMD160 299d5b9c781fda6131ba475527b6e58b7150cee7 SHA1 60f51efe8f701adc67b5c4471ba3c36c8fddb09c SHA256 a3d00073d05717b26863e252a0c25d9ea3598fa29b615459228f729e82577198
-EBUILD kadu-window_notify-0.6.0.ebuild 266 RMD160 299d5b9c781fda6131ba475527b6e58b7150cee7 SHA1 60f51efe8f701adc67b5c4471ba3c36c8fddb09c SHA256 a3d00073d05717b26863e252a0c25d9ea3598fa29b615459228f729e82577198
-MISC ChangeLog 224 RMD160 4f311f080ed5557f450670f32b1ded718bea2ed6 SHA1 ff28dfd0f3acf019de7ce600c5f671f2488249d6 SHA256 c2e4fb6e9b3f2396edd892cbba34a70a791c3e92628e2063a94c71b4fac60e99
+MISC ChangeLog 327 RMD160 93c8c84e7904dad8465fffbbc3423b1bbf249603 SHA1 49159fd49550cf4b3fe07061d4e376f89c7d251f SHA256 f78241957a3831b18a92b27a809a0dbdf41021b23296db332b59aa8bd055e8c3
